add local debug steps